# Nexus

./: .gitignore  AGENTS.md  AUDIT.md  BENCHMARKS.md  CHANGELOG.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  Cargo.lock.tmp  Cargo.toml  README.md  README.md.tmp  SECURITY.md  SETUP.md  VALIDATION_REPORT.md  WASM_SNAP_ROLLBACK_ARCHITECTURE.md  deny.toml  test_payload.wasm  test_payload.wat  validate.sh
.agents/skills/Nexus/: SKILL.md
.agents/skills/Nexus/agents/: openai.yaml
.cargo/: config.toml
.claude/: ecc-tools.json  identity.json  settings.json
.claude/PRPs/reports/: capability-attenuation-chains-report.md
.claude/agents/: claim-tracer.md
.claude/skills/integrity-audit/: SKILL.md
.codex/: AGENTS.md
.github/: CODEOWNERS
.github/workflows/: ai-rescore.yml  bencher-archive.yml  benchmarks.yml  ci.yml  deny.yml  release-readiness.yml
artifacts/: density-benchmark.json  nexusiq-baseline.json  specs.json  specs.md
artifacts/raw/: phase2_hyperfine.json  phase2_hyperfine.md  phase3_ai_validation_claude.md  phase3_ai_validation_gemini_phaseA.md  phase3_ai_validation_gpt.md  phase3_ai_validation_inline_phaseB.md  phase3_ai_validation_kimi_phaseA.md  phase3_bad_float_to_int.json  phase3_div_by_zero.json  phase3_index.json  phase3_indirect_call_null.json  phase3_infinite_loop.json  phase3_instinct_ab.md  phase3_integer_overflow.json  phase3_invalid_module.json  phase3_memory_out_of_bounds.json  phase3_missing_start.json  phase3_stack_overflow.json  phase3_trap_unreachable.json  phase_a_code_review.md  phase_a_thermo_review.md
benches/: density_validation.rs  nexus_iq_bench.rs  nexus_validation.rs
crates/aeon_nexus_bridge/: Cargo.toml
crates/aeon_nexus_bridge/src/: lib.rs
crates/aeon_nexus_bridge/tests/: bridge.rs
dashboard/: .gitignore  competitors.yml  next.config.js  package-lock.json  package.json
dashboard/pages/: index.jsx
dashboard/styles/: globals.css
docs/: AEON_IQ_NEXUS_MERGE_AUDIT.md  AEON_NEXUS_BUILD_PLAN.md  AEON_NEXUS_KEY_PROVISIONING.md  AEON_NEXUS_RUNBOOK.md  AEON_NEXUS_THREAT_MODEL.md  AGENT-COORDINATION.md  NEXUSIQ_COMPLETION_PLAN.md  NEXUSIQ_PROOF_LIMITATIONS.md  NEXUSIQ_SECURITY_REVIEW.md  NEXUSIQ_THREAT_MODEL.md  baremetal_baselines.md  harness_static_analysis.md  mcp-setup.md  phase_d_distributed_snapshot_fabric.md  security_threat_model_phase_b.md
docs/adr/: 0001-capability-model-hardening.md
docs/research/: breakthrough-backlog.md
docs/rfcs/: 0001-distributed-snapshot-sync.md  0002-wasm-callstack-capture.md  0003-zk-capability-attestation.md  0004-capability-profiles.md  0005-runtime-proof-capsules.md  README.md
docs/rfcs/examples/: sample-profile.toml
examples/: aeon_e2e_demo.rs  capture_error.rs  instinct_ab.rs  mcp_smoke.sh  wasi_file_read.rs
examples/wasi_capability_demo/: csv_reporter.wasm  host.rs
examples/wasi_capability_demo/guest/: Cargo.toml
examples/wasi_capability_demo/input/: orders.csv
examples/wasi_capability_demo/output/: report.txt
examples/wasi_capability_demo/secrets/: fake-token.txt  token.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_execute_tool.rs  fuzz_mcp_requests.rs  fuzz_sanitize_for_prompt.rs
nexus/: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE
nexus/.cargo/: config.toml
nexus/src/: error.rs
nexus/src/sandbox/: fuel_meter.rs  wasm_runtime.rs
nexus/src/security/: mod.rs
nexus/src/snapshot/: compression.rs  mod.rs
plans/: nexus-iq-product.p0-egress-guard.plan.md  nexus-iq-product.p1-http-transport.plan.md  nexus-iq-product.p2-auth-tenancy.plan.md  nexus-iq-product.p25-dynamic-tenant-registry.plan.md  nexus-iq-product.prd.md  nexus-third-party-benchmark-pipeline.md  nexusiq-completion-blueprint.md
scripts/: _rebuild_phase3_index.py  _subagent_status.py  ai_rescore.py  analyze_and_report.py  bench_env.sh  criterion_to_json.py  generate_benchmark_svg.py  install_toolchain.sh  no-secret-scan.sh  proof-capsule-smoke.sh  run_local_comparison.sh  run_phase1_criterion.sh  run_phase2_hyperfine.sh  run_phase3_capture.sh  setup_benchmark_env.sh  test-flight.sh
scripts/codex-pipeline/: lib.sh  wsl-commit-wave.sh  wsl-dispatch-task.sh  wsl-integrate-wave.sh  wsl-next-wave.sh  wsl-runner-template.sh  wsl-task-preflight.sh  wsl-watch-task.sh
scripts/docker/: Dockerfile.wasmtime
src/: aeon.rs  error.rs  lib.rs  main.rs
src.tmp/: lib.rs
src.tmp/hypervisor/: executor.rs  mod.rs
src.tmp/hypervisor/validator/: mod.rs
src/daemon/: mod.rs  module_cache.rs  pool.rs  protocol.rs
src/hypervisor/: failure_mode.rs  llm_policy.rs  mod.rs  recovery.rs  speculative.rs
src/hypervisor/validator/: error_log.rs  health.rs  mod.rs
src/instinct/: mod.rs
src/profile/: mod.rs
src/proof/: canonical.rs  digest.rs  mod.rs  receipt.rs  redaction.rs  schema.rs  scorecard.rs  signing.rs
src/sandbox/: fuel_budget.rs  fuel_meter.rs  mod.rs  module_cache.rs  pool.rs  wasi.rs  wasm_memory.rs  wasm_runtime.rs
src/security/: capability.rs  denial.rs  egress.rs  mod.rs  negotiator.rs  url_guard.rs
src/snapshot/: compression.rs  differential.rs  manager.rs  mod.rs
src/snapshot/sync/: digest.rs  framed.rs  lineage.rs  mod.rs  protocol.rs  transport.rs
src/telemetry/: call_stack.rs  mod.rs  trace.rs
tests/: adaptive_fuel.rs  aeon_conformance.rs  capability_enforcement.rs  daemon_named_pipe.rs  differential_snapshots.rs  execution_replay.rs  full_wasm_state.rs  instinct_outcome_feedback.rs  integrated_path.rs  integration_tests.rs  mcp_acceptance.rs  mcp_server.rs  memory_limit.rs  nexus_iq_attestation.rs  nexus_iq_denial.rs  nexus_iq_mcp.rs  nexus_iq_support.rs  nexus_iq_timeline.rs  phase3_distinct_outputs.rs  proof_digest.rs  proof_execution.rs  proof_redaction.rs  proof_schema.rs  proof_scorecard.rs  proof_signing.rs  rollback_restore.rs  sandbox_pool.rs  security_hardening.rs  self_correction_optin.rs  snapshot_sync_digest.rs  snapshot_sync_framed.rs  snapshot_sync_lineage.rs  snapshot_sync_protocol.rs  speculative_execution.rs  tool_input_plumbing.rs  wasi_capability.rs  wasi_e2e_demo.rs  wasi_public_hypervisor.rs  wasm_call_stack_capture.rs
(+51 files in other folders)
