[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
authors = ["Nexus AI Infrastructure Team"]
description = "AI-Native WASM Snap-Rollback Sandbox for Agent Execution"
license = "Apache-2.0"
repository = "https://github.com/nexus-ai/nexus"

[dependencies]
# WebAssembly runtime
wasmtime = { version = "37.0", features = ["cranelift", "async"] }
wasmtime-wasi = { version = "37.0" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression for snapshots
zstd = "0.13"

# Cryptography for capability tokens
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# System info for health validation
sysinfo = "0.32"

# SHA for content hashing
sha2 = "0.10"

# Optional: metrics
prometheus = { version = "0.13", optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# WAT parsing for demos
wat = "1.0"

[features]
default = []
component-model = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"
proptest = "1.5"

[[bench]]
name = "nexus_validation"
harness = false
