[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
authors = ["Nexus AI Infrastructure Team"]
description = "AI-Native WASM Snap-Rollback Sandbox for Agent Execution"
license = "Apache-2.0"
repository = "https://github.com/nexus-ai/nexus"

[dependencies]
# WebAssembly runtime
wasmtime = { version = "37.0", features = ["cranelift", "async"] }
wasmtime-wasi = { version = "37.0" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression for snapshots
zstd = "0.13"

# Cryptography for capability tokens
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# System info for health validation
sysinfo = "0.32"

# SHA for content hashing
sha2 = "0.10"

# Optional: metrics
prometheus = { version = "0.13", optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# WAT parsing for demos
wat = "1.0"

# Daemon framing (length-prefixed JSON) and base64 for wasm bytes.
base64 = "0.22"
futures = "0.3"

# Optional, only with `ai-recovery` feature.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio-util = { version = "0.7", optional = true }

[features]
default = []
component-model = []
# Benchmark shards used by the CodSpeed workflow. Native Criterion/Bencher
# runs do not enable these features and still execute the complete bench suite.
bench-cold-start = []
bench-snapshot-create = []
bench-snapshot-rollback = []
bench-execute-tool = []
bench-execute-real-memory = []
# Optional LLM-backed recovery suggester (Phase B). Off by default so
# `cargo build` does not pull in HTTP / TLS / token-secret handling for
# users who only want the static + instinct policies.
ai-recovery = ["dep:reqwest", "dep:tokio-util"]

[dev-dependencies]
criterion = "0.5"
codspeed-criterion-compat = "2.7"
tempfile = "3.14"
proptest = "1.5"

[[bin]]
name = "nexus"
path = "src/main.rs"

[[bin]]
name = "nexus-agentd"
path = "src/bin/nexus_agentd.rs"
required-features = []

[[bench]]
name = "nexus_validation"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(codspeed)'] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
strip = false
debug = 1
