[package]
name = "nexus"
version = "1.0.0"
edition = "2021"
authors = ["Nexus AI Infrastructure Team"]
description = "AI-Native WASM Snap-Rollback Sandbox for Agent Execution"
license = "MIT"
repository = "https://github.com/adaptiveliquidity/Nexus"

[dependencies]
# WebAssembly runtime
wasmtime = { version = "45.0.2", features = ["cranelift", "async", "component-model"] }
wasmtime-wasi = { version = "45.0.2", features = ["p1"] }

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.12"
bincode = "1.3"
url = "2.5"

# Compression for snapshots
zstd = "0.13"

# Cryptography for capability tokens
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# System info for health validation
sysinfo = "0.32"

# SHA for content hashing
sha2 = "0.10"
hmac = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

# WAT parsing for demos
wat = "1.0"

# Daemon framing (length-prefixed JSON) and base64 for wasm bytes.
base64 = "0.22"
futures = "0.3"

# MCP server (Model Context Protocol) for Claude Code integration.
rmcp = { version = "1.7", features = ["server", "transport-io"] }
# Optional HTTP transport stack for rmcp streamable-http server mode.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
hyper = { version = "1", default-features = false, features = ["http1", "server"], optional = true }
tower = { version = "0.4", default-features = false, features = ["util"], optional = true }

# Optional, only with `ai-recovery` feature.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio-util = { version = "0.7", optional = true }

# Optional, only with `aeon-memory` feature.
aeon_nexus_bridge = { path = "crates/aeon_nexus_bridge", optional = true }

[features]
default = []

# Remote HTTP transport for Nexus MCP. This enables rmcp's streamable HTTP
# server surface while keeping default stdio behavior unchanged.
mcp-http = ["rmcp/transport-streamable-http-server", "dep:axum", "dep:hyper", "dep:tower"]
component-model = []
# Benchmark shards used by the CodSpeed workflow. Native Criterion/Bencher
# runs do not enable these features and still execute the complete bench suite.
bench-cold-start = []
bench-snapshot-create = []
bench-snapshot-rollback = []
bench-execute-tool = []
bench-execute-real-memory = []
bench-integrated = []
# Concurrent sandbox density benchmark (pooled vs non-pooled). Heavy and
# noisy by design — run manually or on a nightly schedule, not on every PR.
bench-density = []
# Optional LLM-backed recovery suggester (Phase B). Off by default so
# `cargo build` does not pull in HTTP / TLS / token-secret handling for
# users who only want the static + instinct policies.
ai-recovery = ["dep:reqwest", "dep:tokio-util"]
# Route ai-recovery OpenAI-compatible requests through the AEON-IQ memory proxy.
# Off by default; enabling it also enables the ai-recovery HTTP lane.
aeon-memory = ["ai-recovery", "dep:aeon_nexus_bridge"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
codspeed-criterion-compat = "4"
tempfile = "3.14"
proptest = "1.5"

[[bin]]
name = "nexus"
path = "src/main.rs"

[[bin]]
name = "nexus-agentd"
path = "src/bin/nexus_agentd.rs"
required-features = []

[[bin]]
name = "nexus-mcp"
path = "src/bin/nexus_mcp.rs"

[[example]]
name = "wasi_capability_demo"
path = "examples/wasi_capability_demo/host.rs"

[[example]]
name = "aeon_e2e_demo"
path = "examples/aeon_e2e_demo.rs"
required-features = ["aeon-memory"]

[[bench]]
name = "nexus_validation"
harness = false

[[bench]]
name = "nexus_iq_bench"
harness = false

# Density benchmark: custom harness (own percentile + RSS measurement,
# JSON sidecar output). Gated behind bench-density so it never runs in the
# default `cargo bench` / PR CI surface.
[[bench]]
name = "density_validation"
harness = false
required-features = ["bench-density"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(codspeed)'] }

[workspace]
members = [".", "crates/aeon_nexus_bridge"]
exclude = ["fuzz"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16
strip = false
debug = 1
