[package]
name = "aeon_nexus_bridge"
version = "0.1.0"
edition = "2021"
description = "Shared AEON-IQ/Nexus memory evidence wire types and digest helpers"
license = "MIT"
publish = false

[dependencies]
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
